Fixed small alignment issues and added bottom border to header.

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ section p:nth-last-of-type(1) {
 
 header {
     background-color: #ffffff;
+    border-bottom: 1px solid #cccccc;
 }
 
 h1 {
@@ -54,7 +55,7 @@ h1 {
 
 nav {
     float: right;
-    padding-top: 27px;
+    padding-top: 31px;
 }
 
 nav a {
